@@ -1,7 +1,7 @@
 name: Build and Publish Docker Images
 
 env:
-  DEBIANVERSION: bullseye
+  DEBIANVERSION: bookworm
 
 on:
   push:
