@@ -1,2 +1,5 @@
+2023-10-09:
+ - switch to bookworm
+
 2023-06-23:
  - create changelog
